overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cesi-ci-cd-prod
  labels:
    pod-security.kubernetes.io/enforce: baseline
