overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          # <-- Ici le workflow remplace uniquement le tag (ex: ghcr.io/OWNER/REPO:sha-abc123)
          image: ghcr.io/OWNER/REPO:latest
          ports:
            - containerPort: 8080
